--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="purple">#AA00AA</color>
     <color name="yellow">#B4B400</color>
     <color name="green">#00A500</color>
+    <color name="green_03">#038003</color>
     <color name="blue">#0000AA</color>
     <color name="cyan">#00B6B6</color>
     <!--启动页面-->
