--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black_c">#ccc</color>
     <color name="black_b">#bbb</color>
     <color name="black_9">#999</color>
+    <color name="black_70">#707070</color>
     <color name="black_6">#666</color>
     <color name="black_3">#333</color>
     <color name="white">#fff</color>
