--- a/app/src/main/res/layouts/ui/layout/fragment_home.xml
+++ b/app/src/main/res/layouts/ui/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +8,15 @@
     tools:context=".ui.main.MainActivity"
     tools:ignore="HardcodedText">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="HOME" />
+
+    <com.project.mvvmframe.widget.PraiseView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:text="100"
+        app:textColor="@color/black_3"
+        app:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
