--- a/app/src/main/res/layouts/ui/layout/fragment_home.xml
+++ b/app/src/main/res/layouts/ui/layout/fragment_home.xml
@@ -9,14 +9,31 @@
     tools:ignore="HardcodedText">
 
 
-    <com.project.mvvmframe.widget.PraiseView
+    <LinearLayout
+        android:id="@+id/ll_praise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:text="100"
-        app:textColor="@color/black_3"
-        app:textSize="16sp" />
+        android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <ImageView
+            android:id="@+id/iv_praise"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@null"
+            android:src="@mipmap/icon_praise_uncheck" />
+
+        <com.project.mvvmframe.widget.PraiseView
+            android:id="@+id/praiseView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            app:text="99"
+            app:textColor="@color/black_3"
+            app:textSize="16sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
